# VictoriaAi

./: CLAUDE.md  Index.html(1).txt  dashboard.html  index.html  sensordashboard.html
macro/: render.py  (+2 more)
polyfunnel/: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  pyproject.toml
polyfunnel/config/: costs.yaml
polyfunnel/docs/: DATA_REPORT.md  GROUND_TRUTH.md  UNIVERSE_REPORT.md  edge_screener.html  edge_screener.json  pnl_sim.html
polyfunnel/scripts/: _pnl_style.css  analyze_trades.py  basis_analysis.py  build_pnl_page.py  build_screener_board.py  collect_feefree.py  collect_rtds.py  collect_trades.py  collect_updown.py  edge_screener.py  install_hooks.sh  paper_trader.py  phase0_recon.py  register_task.ps1  run_collectors.ps1  sim_pnl.py  study_t60_calibration.py  tape_status.py
polyfunnel/scripts/hooks/: pre-commit
polyfunnel/src/polyfunnel/: __init__.py  costs.py
polyfunnel/tests/: test_costs.py
polyfunnel/vault/: STRATEGY-feefree.md  STRATEGY.md
polyfunnel/vault/paper/: ledger.ndjson
polyfunnel/vault/research/: 2026-07-07-postfee-era-research.md
polyfunnel/vault/studies/: 2026-07-07-t60-calibration.md  2026-07-20-basis-and-maker-tape.md
quantdesk/: .gitignore  README.md  pyproject.toml
quantdesk/quantdesk/: __init__.py  cli.py  config.py  dashboard.py
quantdesk/tests/: fake_provider.py  test_backtest.py  test_black_scholes.py  test_cache.py  test_cli.py  test_config.py  test_dashboard.py  test_filters.py  test_journal.py  test_models.py  test_phase5_cli.py  test_probability.py  test_regime.py  test_risk.py  test_screener.py  test_strategies.py  test_volatility.py
(+413 files in other folders)
